--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-email/components": "0.0.22",
     "@react-email/render": "0.0.17",
     "@tabler/icons-react": "^3.11.0",
-    "@tanstack/react-query": "^5.51.11",
+    "@tanstack/react-query": "^4.36.1",
     "@tiptap/extension-code-block-lowlight": "^2.5.7",
     "@tiptap/extension-color": "^2.5.7",
     "@tiptap/extension-highlight": "^2.5.7",
@@ -33,7 +33,9 @@
     "@tiptap/extension-underline": "^2.5.7",
     "@tiptap/pm": "^2.5.7",
     "@tiptap/starter-kit": "^2.5.7",
-    "axios": "^1.7.2",
+    "@trpc/client": "^10.45.2",
+    "@trpc/react-query": "^10.45.2",
+    "@trpc/server": "^10.45.2",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "lucia": "^3.2.0",
@@ -44,6 +46,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-email": "2.1.6",
+    "superjson": "^2.2.1",
     "tailwind-merge": "^2.4.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
