--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@mantine/core": "^7.11.2",
+    "@mantine/dropzone": "^7.11.2",
     "@mantine/form": "^7.11.2",
     "@mantine/hooks": "^7.11.2",
     "@mantine/notifications": "^7.11.2",
@@ -22,22 +23,36 @@
     "@tanstack/react-query": "^4.36.1",
     "@tiptap/extension-code-block-lowlight": "^2.5.7",
     "@tiptap/extension-color": "^2.5.7",
+    "@tiptap/extension-font-family": "^2.5.7",
     "@tiptap/extension-highlight": "^2.5.7",
+    "@tiptap/extension-image": "^2.5.7",
     "@tiptap/extension-link": "^2.5.7",
+    "@tiptap/extension-mention": "^2.5.7",
+    "@tiptap/extension-placeholder": "^2.5.7",
     "@tiptap/extension-subscript": "^2.5.7",
     "@tiptap/extension-superscript": "^2.5.7",
+    "@tiptap/extension-table": "^2.5.7",
+    "@tiptap/extension-table-cell": "^2.5.7",
+    "@tiptap/extension-table-header": "^2.5.7",
+    "@tiptap/extension-table-row": "^2.5.7",
     "@tiptap/extension-task-item": "^2.5.7",
     "@tiptap/extension-task-list": "^2.5.7",
     "@tiptap/extension-text-align": "^2.5.7",
     "@tiptap/extension-text-style": "^2.5.7",
     "@tiptap/extension-underline": "^2.5.7",
+    "@tiptap/extension-youtube": "^2.5.7",
     "@tiptap/pm": "^2.5.7",
+    "@tiptap/react": "^2.5.7",
     "@tiptap/starter-kit": "^2.5.7",
+    "@tiptap/suggestion": "^2.5.7",
     "@trpc/client": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
+    "@uploadthing/react": "^6.7.2",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
+    "highlight.js": "^11.10.0",
+    "lowlight": "^3.1.0",
     "lucia": "^3.2.0",
     "mantine-form-zod-resolver": "^1.1.0",
     "next": "14.2.5",
