--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "@tiptap/extension-text-align": "^2.5.7",
     "@tiptap/extension-text-style": "^2.5.7",
     "@tiptap/extension-underline": "^2.5.7",
-    "@tiptap/extension-youtube": "^2.5.7",
     "@tiptap/pm": "^2.5.7",
     "@tiptap/react": "^2.5.7",
     "@tiptap/starter-kit": "^2.5.7",
@@ -48,7 +47,6 @@
     "@trpc/client": "^10.45.2",
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
-    "@uploadthing/react": "^6.7.2",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "highlight.js": "^11.10.0",
@@ -63,6 +61,7 @@
     "react-email": "2.1.6",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.4.0",
+    "uploadthing": "^6.13.2",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
   },
@@ -79,6 +78,7 @@
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
     "prisma": "^5.17.0",
+    "sass": "^1.77.8",
     "tailwindcss": "^3.4.6",
     "typescript": "^5"
   }
