--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@mantine/core": "^7.11.2",
     "@mantine/dropzone": "^7.11.2",
-    "@mantine/form": "^7.11.2",
     "@mantine/hooks": "^7.11.2",
     "@mantine/notifications": "^7.11.2",
     "@mantine/tiptap": "^7.11.2",
@@ -52,13 +52,13 @@
     "highlight.js": "^11.10.0",
     "lowlight": "^3.1.0",
     "lucia": "^3.2.0",
-    "mantine-form-zod-resolver": "^1.1.0",
     "next": "14.2.5",
     "nodemailer": "^6.9.14",
     "oslo": "^1.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-email": "2.1.6",
+    "react-hook-form": "^7.52.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.4.0",
     "uploadthing": "^6.13.2",
