Main functionality of posts page is done

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@react-email/components": "0.0.22",
     "@react-email/render": "0.0.17",
     "@tabler/icons-react": "^3.11.0",
-    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query": "^5.51.16",
+    "@tanstack/react-query-devtools": "^5.51.16",
     "@tiptap/extension-code-block-lowlight": "^2.5.7",
     "@tiptap/extension-color": "^2.5.7",
     "@tiptap/extension-font-family": "^2.5.7",
@@ -44,11 +45,12 @@
     "@tiptap/react": "^2.5.7",
     "@tiptap/starter-kit": "^2.5.7",
     "@tiptap/suggestion": "^2.5.7",
-    "@trpc/client": "^10.45.2",
-    "@trpc/react-query": "^10.45.2",
-    "@trpc/server": "^10.45.2",
+    "@trpc/client": "^11.0.0-rc.467",
+    "@trpc/react-query": "^11.0.0-rc.467",
+    "@trpc/server": "^11.0.0-rc.467",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "highlight.js": "^11.10.0",
     "lowlight": "^3.1.0",
     "lucia": "^3.2.0",
